...

    </LinearLayout>

    <!-- EditText for event description input -->
    <EditText
        android:inputType="textMultiLine"
        android:id="@+id/editTextEventDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/event_hint"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"/>


    <!-- Add button -->
    <Button
        android:id="@+id/saveButton"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
...
